force-app/main/default/objects/Form_Component__c/Form_Component__c.object-meta.xml
<CustomObject>
    <description>Component level in a hierarchically structured HTML form for online submissions</description>
    <label>Form Component</label>
    <nameField>
        <label>Form Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Components</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>