force-app/main/default/objects/Form_Component__c/fields/Checkbox_limit__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_limit__c</fullName>
    <description>Upper limit on the number of checkbox selections permitted for this component</description>
    <inlineHelpText>Upper limit on the number of checkbox selections permitted for this component</inlineHelpText>
    <label>Checkbox limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>