force-app/main/default/objects/Form_Component__c/fields/Checkbox_minimum__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_minimum__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lower limit on the number of checkbox selections permitted for this component</description>
    <inlineHelpText>Lower limit on the number of checkbox selections permitted for this component</inlineHelpText>
    <label>Checkbox minimum</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>