force-app/main/default/objects/Form_Component__c/fields/Classes__c.field-meta.xml
<CustomField>
    <fullName>Classes__c</fullName>
    <description>Extra classes (space-separated) for the DOM element for this component (e.g. bootstrap width classes)</description>
    <inlineHelpText>Extra classes (space-separated) for the DOM element for this component (e.g. bootstrap width classes)</inlineHelpText>
    <label>Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>