force-app/main/default/objects/Form_Component__c/fields/Clear_on_re_open__c.field-meta.xml
<CustomField>
    <fullName>Clear_on_re_open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then delete the form data associated with this component when a form instance is re-opened, that is, when its Date Submitted is cleared.</description>
    <inlineHelpText>If checked, then delete the form data associated with this component when a form instance is re-opened, that is, when its Date Submitted is cleared.</inlineHelpText>
    <label>Clear on re-open</label>
    <type>Checkbox</type>
</CustomField>