force-app/main/default/objects/Form_Component__c/fields/Controlling_component__c.field-meta.xml
<CustomField>
    <fullName>Controlling_component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Form component upon which this component is dependent (in terms of visibility, etc.).</description>
    <inlineHelpText>Form component upon which this component is dependent (in terms of visibility, etc.).</inlineHelpText>
    <label>Controlling component</label>
    <referenceTo>Form_Component__c</referenceTo>
    <relationshipLabel>Form Components (Controlling component)</relationshipLabel>
    <relationshipName>Form_ComponentsDependent</relationshipName>
    <type>Lookup</type>
</CustomField>