force-app/main/default/objects/Form_Component__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description and internal details related to this form component</description>
    <inlineHelpText>Description and internal details related to this form component</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>