force-app/main/default/objects/Form_Component__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent form of this component</description>
    <inlineHelpText>The parent form of this component</inlineHelpText>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Components</relationshipLabel>
    <relationshipName>Form_Components</relationshipName>
    <type>Lookup</type>
</CustomField>