force-app/main/default/objects/Form_Component__c/fields/Form_name__c.field-meta.xml
<CustomField>
    <fullName>Form_name__c</fullName>
    <description>The name of the form containing this form component</description>
    <formula>Form__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the form containing this form component</inlineHelpText>
    <label>Form name</label>
    <type>Text</type>
</CustomField>