force-app/main/default/objects/Form_Component__c/fields/Form_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (translatable) text phrase for this component</description>
    <inlineHelpText>The (translatable) text phrase for this component</inlineHelpText>
    <label>Form Phrase</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Components</relationshipLabel>
    <relationshipName>Form_Components</relationshipName>
    <type>Lookup</type>
</CustomField>