force-app/main/default/objects/Form_Component__c/fields/Form_Phrase_expected_answer__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_expected_answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the phrase for the expected (aka &quot;correct&quot;) answer for this question, if any.  The phrase should appear on this component&apos;s picklist.</description>
    <inlineHelpText>Link to the phrase for the expected (aka &quot;correct&quot;) answer for this question, if any.  The phrase should appear on this component&apos;s picklist.</inlineHelpText>
    <label>Form Phrase expected answer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Form_Picklist__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Components (Form Phrase expected answer)</relationshipLabel>
    <relationshipName>Form_Components3</relationshipName>
    <type>Lookup</type>
</CustomField>