force-app/main/default/objects/Form_Component__c/fields/Form_Phrase_help__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_help__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (translatable) text phrase for help for this component</description>
    <inlineHelpText>The (translatable) text phrase for help for this component</inlineHelpText>
    <label>Form Phrase help</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Components (Form Phrase help)</relationshipLabel>
    <relationshipName>Form_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>