force-app/main/default/objects/Form_Component__c/fields/Form_phrase_in_English__c.field-meta.xml
<CustomField>
    <fullName>Form_phrase_in_English__c</fullName>
    <description>The text of this component&apos;s form phrase in English</description>
    <inlineHelpText>The text of this component&apos;s form phrase in English</inlineHelpText>
    <label>Form phrase in English</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>