force-app/main/default/objects/Form_Component__c/fields/Form_Phrase_Intro__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_Intro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The translatable intro text for this component (normally a section or other group component)</description>
    <inlineHelpText>The translatable intro text for this component (normally a section or other group component)</inlineHelpText>
    <label>Form Phrase Intro</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Components (Form Phrase Intro)</relationshipLabel>
    <relationshipName>Form_Components4</relationshipName>
    <type>Lookup</type>
</CustomField>