force-app/main/default/objects/Form_Component__c/fields/Form_Phrase_replacement_for_View__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_replacement_for_View__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The text phrase that replaces this component in View mode - if blank, then component display is the same in View and Edit.</description>
    <inlineHelpText>The text phrase that replaces this component in View mode - if blank, then component display is the same in View and Edit.</inlineHelpText>
    <label>Form Phrase replacement for View</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Components (Form Phrase replacement for View)</relationshipLabel>
    <relationshipName>Form_Components2</relationshipName>
    <type>Lookup</type>
</CustomField>