force-app/main/default/objects/Form_Component__c/fields/Form_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Form_Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The picklist of possible values for this component (when the component is rendered as radio buttons or pull-down menu)</description>
    <inlineHelpText>The picklist of possible values for this component (when the component is rendered as radio buttons or pull-down menu)</inlineHelpText>
    <label>Form Picklist</label>
    <referenceTo>Form_Picklist__c</referenceTo>
    <relationshipLabel>Form Components</relationshipLabel>
    <relationshipName>Form_Components</relationshipName>
    <type>Lookup</type>
</CustomField>