force-app/main/default/objects/Form_Component__c/fields/Grid_size__c.field-meta.xml
<CustomField>
    <fullName>Grid_size__c</fullName>
    <description>The grid size (number between 1 and 12) specified by the Classes field</description>
    <formula>IF ( LEFT( Classes__c , 7 ) = &quot;col-md-&quot; &amp;&amp; ISNUMBER(RIGHT(Classes__c, LEN(Classes__c) - 7)), 
 VALUE(RIGHT(Classes__c, LEN(Classes__c) - 7)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The grid size (number between 1 and 12) specified by the Classes field</inlineHelpText>
    <label>Grid size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>