force-app/main/default/objects/Form_Component__c/fields/Group_Component__c.field-meta.xml
<CustomField>
    <fullName>Group_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent component of this component, if any.  Used for example, to pack multiple components into a single cell of a table.</description>
    <inlineHelpText>The parent component of this component, if any.  Used for example, to pack multiple components into a single cell of a table.</inlineHelpText>
    <label>Group Component</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Group Component must be a group type and linked to the same form.</errorMessage>
        <filterItems>
            <field>Form_Component__c.Is_group__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Form_Component__c</referenceTo>
    <relationshipLabel>Form Components</relationshipLabel>
    <relationshipName>Form_Components</relationshipName>
    <type>Lookup</type>
</CustomField>