force-app/main/default/objects/Form_Component__c/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this form component should remain hidden</description>
    <inlineHelpText>Checked if this form component should remain hidden</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>