force-app/main/default/objects/Form_Component__c/fields/Hierarchical_level_num__c.field-meta.xml
<CustomField>
    <fullName>Hierarchical_level_num__c</fullName>
    <description>The hierarchical level of this form component - 0 if it has no parent group component, 1 if it is the child of a top-level group component, etc.</description>
    <formula>/* Count number of &quot;.&quot;s in the hierarchical sort num. */
LEN( Hierarchical_sort_num__c ) - LEN(SUBSTITUTE( Hierarchical_sort_num__c , &quot;.&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The hierarchical level of this form component - 0 if it has no parent group component, 1 if it is the child of a top-level group component, etc.</inlineHelpText>
    <label>Hierarchical level num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>