force-app/main/default/objects/Form_Component__c/fields/Hierarchical_sort_num__c.field-meta.xml
<CustomField>
    <fullName>Hierarchical_sort_num__c</fullName>
    <description>A sortable text string that represents the hierarchical position of this form component</description>
    <formula>IF(ISBLANK( Group_Component__c ),
RIGHT(&quot;0&quot; &amp; TEXT(Sort_number__c *10), 3),
IF(ISBLANK( Group_Component__r.Group_Component__c ),
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Sort_number__c *10), 3),
IF(ISBLANK( Group_Component__r.Group_Component__r.Group_Component__c ),
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Sort_number__c *10), 3),
IF(ISBLANK( Group_Component__r.Group_Component__r.Group_Component__r.Group_Component__c),
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Group_Component__r.Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Sort_number__c *10), 3),
IF(ISBLANK( Group_Component__r.Group_Component__r.Group_Component__r.Group_Component__r.Group_Component__c),
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Group_Component__r.Group_Component__r.Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Group_Component__r.Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Group_Component__r.Sort_number__c *10), 3) &amp; &quot;.&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(Sort_number__c *10), 3),

&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A sortable text string that represents the hierarchical position of this form component</inlineHelpText>
    <label>Hierarchical sort num</label>
    <type>Text</type>
</CustomField>