force-app/main/default/objects/Form_Component__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The indicator linked from this form component (only relevant when type = &apos;indicator&apos;)</description>
    <inlineHelpText>The indicator linked from this form component (only relevant when type = &apos;indicator&apos;)</inlineHelpText>
    <label>Indicator</label>
    <referenceTo>Indicator__c</referenceTo>
    <relationshipLabel>Form Components</relationshipLabel>
    <relationshipName>Form_Components</relationshipName>
    <type>Lookup</type>
</CustomField>