force-app/main/default/objects/Form_Component__c/fields/Is_group__c.field-meta.xml
<CustomField>
    <fullName>Is_group__c</fullName>
    <description>Denotes a Group component with child form component records.</description>
    <formula>IF (
 ISPICKVAL( Type__c , &quot;group&quot;) ||
 ISPICKVAL( Type__c , &quot;section&quot;) ||
 CONTAINS ( TEXT (Type__c), &quot;table&quot;),
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is group</label>
    <type>Checkbox</type>
</CustomField>