force-app/main/default/objects/Form_Component__c/fields/NoFormDataClone__c.field-meta.xml
<CustomField>
    <fullName>NoFormDataClone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then this component&apos;s form data is not cloned when a form instance is (deep) cloned.</description>
    <inlineHelpText>If checked, then this component&apos;s form data is not cloned when a form instance is (deep) cloned.</inlineHelpText>
    <label>NoFormDataClone</label>
    <type>Checkbox</type>
</CustomField>