force-app/main/default/objects/Form_Component__c/fields/Numbered__c.field-meta.xml
<CustomField>
    <fullName>Numbered__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this form component should be rendered with a number, as opposed to being a &quot;sub component&quot; under another numbered component</description>
    <inlineHelpText>Checked if this form component should be rendered with a number, as opposed to being a &quot;sub component&quot; under another numbered component</inlineHelpText>
    <label>Numbered</label>
    <type>Checkbox</type>
</CustomField>