force-app/main/default/objects/Form_Component__c/fields/Prefill_object_name__c.field-meta.xml
<CustomField>
    <fullName>Prefill_object_name__c</fullName>
    <description>The name of the object used to pre-fill form data for this form component for new form instances</description>
    <inlineHelpText>The name of the object used to pre-fill form data for this form component for new form instances</inlineHelpText>
    <label>Prefill object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>