force-app/main/default/objects/Form_Component__c/fields/Read_only__c.field-meta.xml
<CustomField>
    <fullName>Read_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the data in this component is not allowed to be edited</description>
    <inlineHelpText>Checked if the data in this component is not allowed to be edited</inlineHelpText>
    <label>Read only</label>
    <type>Checkbox</type>
</CustomField>