force-app/main/default/objects/Form_Component__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked then this (input) component is required to have a value</description>
    <inlineHelpText>If checked then this (input) component is required to have a value</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>