force-app/main/default/objects/Form_Component__c/fields/Show_if__c.field-meta.xml
<CustomField>
    <fullName>Show_if__c</fullName>
    <description>Condition (based on Controlling component value) used to determine whether to render this component in the form.</description>
    <inlineHelpText>Condition (based on Controlling component value) used to determine whether to render this component in the form.</inlineHelpText>
    <label>Show if</label>
    <length>255</length>
    <type>Text</type>
</CustomField>