force-app/main/default/objects/Form_Component__c/fields/Sort_number__c.field-meta.xml
<CustomField>
    <fullName>Sort_number__c</fullName>
    <description>Determines the sort order for this component within its item</description>
    <inlineHelpText>Determines the sort order for this component within its item</inlineHelpText>
    <label>Sort number</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>