force-app/main/default/objects/Form_Component__c/fields/Sub_numbered__c.field-meta.xml
<CustomField>
    <fullName>Sub_numbered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked (and if Numbered is checked) then number this component at the level of its child components, e.g. &quot;3a&quot; rather than &quot;3&quot;.</description>
    <inlineHelpText>If checked (and if Numbered is checked) then number this component at the level of its child components, e.g. &quot;3a&quot; rather than &quot;3&quot;.</inlineHelpText>
    <label>Sub-numbered</label>
    <type>Checkbox</type>
</CustomField>