force-app/main/default/objects/Form_Component__c/fields/Target_field_name__c.field-meta.xml
<CustomField>
    <fullName>Target_field_name__c</fullName>
    <description>The name of the field to be populated from this form data, if any</description>
    <inlineHelpText>The name of the field to be populated from this form data, if any</inlineHelpText>
    <label>Target field name</label>
    <type>TextArea</type>
</CustomField>