force-app/main/default/objects/Form_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this form component</description>
    <inlineHelpText>The type of this form component</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>checkbox group</fullName>
            </value>
            <value>
                <fullName>checkbox in-line</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>file upload</fullName>
            </value>
            <value>
                <fullName>group</fullName>
            </value>
            <value>
                <fullName>indicator</fullName>
            </value>
            <value>
                <fullName>label</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>radio in-line</fullName>
            </value>
            <value>
                <fullName>section</fullName>
            </value>
            <value>
                <fullName>select</fullName>
            </value>
            <value>
                <fullName>table dynamic</fullName>
            </value>
            <value>
                <fullName>table static</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>textarea</fullName>
            </value>
            <value>
                <fullName>textarea latin chars</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>