force-app/main/default/objects/Form_Component__c/fields/Word_limit__c.field-meta.xml
<CustomField>
    <fullName>Word_limit__c</fullName>
    <description>Upper limit on the number of words permitted in this component&apos;s value</description>
    <inlineHelpText>Upper limit on the number of words permitted in this component&apos;s value</inlineHelpText>
    <label>Word limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>