force-app/main/default/objects/Form_Component__c/validationRules/Checkbox_component_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Checkbox_component_rule</fullName>
    <active>true</active>
    <description>A component of checkbox type must have either a non-blank phrase or a non-blank picklist.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Type__c, &quot;checkbox&quot;) || ISPICKVAL (Type__c, &quot;checkbox group&quot;),
 ISBLANK( Form_Phrase__c ), 
 ISBLANK( Form_Picklist__c ),
 NOT (Hidden__c)
)</errorConditionFormula>
    <errorMessage>A component of checkbox type must have either a non-blank phrase or a non-blank picklist.</errorMessage>
</ValidationRule>