force-app/main/default/objects/Form_Component__c/validationRules/Group_Component_must_be_group_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Component_must_be_group_type</fullName>
    <active>true</active>
    <description>Group Component must have a group Type in order for it to have children components.</description>
    <errorConditionFormula>NOT ( ISBLANK ( Group_Component__c ) ) &amp;&amp; 
NOT (Group_Component__r.Is_group__c)</errorConditionFormula>
    <errorMessage>Group Component must have a group Type in order for it to have children components.</errorMessage>
</ValidationRule>