force-app/main/default/objects/Form_Component__c/validationRules/Needs_picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Needs_picklist</fullName>
    <active>true</active>
    <description>A component that is of type select or a collection of radio buttons must have non-blank picklist.</description>
    <errorConditionFormula>AND(
 ISBLANK( Form_Picklist__c ),
 OR(
   ISPICKVAL(Type__c, &quot;select&quot;), 
   ISPICKVAL(Type__c, &quot;radio&quot;), 
   ISPICKVAL(Type__c, &quot;radio in-line&quot;)
 )
)</errorConditionFormula>
    <errorDisplayField>Form_Picklist__c</errorDisplayField>
    <errorMessage>A component that is of type select or a collection of radio buttons must have non-blank picklist.</errorMessage>
</ValidationRule>