force-app/main/default/objects/Form_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_name__c</columns>
    <columns>Required__c</columns>
    <columns>Sort_number__c</columns>
    <columns>Type__c</columns>
    <columns>Form_Picklist__c</columns>
    <columns>Form_Phrase__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>