force-app/main/default/objects/Form_Component__c/listViews/TEST.listView-meta.xml
<ListView>
    <fullName>TEST</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Target_object_name__c</columns>
    <columns>Target_field_name__c</columns>
    <columns>Indicator__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_name__c</field>
        <operation>equals</operation>
        <value>REV_ReportStandardYearly</value>
    </filters>
    <filters>
        <field>Target_field_name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>TEST</label>
</ListView>